<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/user" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_not_logged_in_yet"
        android:textColor="#000000"
        android:textSize="25dp" />

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:onClick="onClick"
        android:layout_marginTop="30dp"
        android:background="#233DCC"
        android:textColor="#ffffff"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/or"
        android:textColor="#E31111"
        android:textSize="25dp" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/if_you_do_not_have_account"
        android:textColor="#000000"
        android:textSize="25dp" />


    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#233DCC"
        android:text="@string/sign_up"
        android:onClick="mm"
        android:textColor="#ffffff" />

</LinearLayout>