<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgot"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="180dp"
        android:textSize="25dp"
        android:textColor="#000"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:textColor="#000"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/emailforgot"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:textSize="20dp"
        android:padding="3dp"
        android:background="@drawable/edt_bg"
        android:fontFamily="sans-serif"
        android:ems="10"
        android:inputType="textEmailAddress" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="15dp"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/passwordlogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:background="@drawable/edt_bg"
        android:fontFamily="sans-serif"
        android:ems="10"
        android:inputType="textEmailAddress" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="15dp"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/passwordforgot2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="20dp"
        android:padding="3dp"
        android:background="@drawable/edt_bg"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/signup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#FE0000"
        android:clickable="true"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"

        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/back"
        android:background="@color/black"
        android:padding="10dp"/>

</LinearLayout>