<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="50dp"
        android:textSize="35dp"
        android:textColor="#000"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_address"
        android:textColor="#000"
        android:textSize="15dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailsign"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_bg"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress"
        android:padding="3dp"
        android:textColor="@android:color/black"
        android:textSize="20dp" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_bg"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:padding="3dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20dp" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/dob"

        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:ems="10"
        android:background="@drawable/edt_bg"
        android:inputType="date" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_bg"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:padding="3dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20dp" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/cpasswordsign"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_bg"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:padding="3dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FE0000"
        android:clickable="true"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"

        android:textSize="15dp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account"
        android:textColor="#FE5400"
        android:textSize="15dp"
        android:clickable="true"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:src="@drawable/back"/>
</LinearLayout>