<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    >

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="0dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:gravity="center_horizontal"
            android:src="@drawable/deafult_post"
            android:background="@color/colorAccent"
            android:padding="7dp"
            tools:ignore="MissingClass" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/txtName"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="15dp"/>
        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edt_bg"
            android:textColor="#000"
            android:padding="5dp"
            android:singleLine="true"
            android:id="@+id/edtname"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edt_bg"
            android:textColor="#000"
            android:padding="5dp"
            android:inputType="phone"
            android:singleLine="true"
            android:id="@+id/edtphone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:background="@drawable/edt_bg"
            android:textColor="#000"
            android:padding="5dp"
            android:singleLine="true"
            android:id="@+id/edtaddress"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/edtdescription"
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edt_bg"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="#000" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edt_bg"
            android:textColor="#000"
            android:padding="5dp"
            android:inputType="number"
            android:singleLine="true"
            android:id="@+id/price"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="15dp"/>

        <Spinner
            android:id="@+id/Spinnner"
            android:entries="@array/Spinnner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DFD9D9"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:layout_marginTop="0dp"></Spinner>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="5dp"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>

</ScrollView>