<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".otp"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="180dp"
        android:textSize="30dp"
        android:textColor="#000"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/emaillogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_bg"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress"
        android:padding="3dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FE0000"
        android:clickable="true"
        android:fontFamily="sans-serif"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:textStyle="bold"

        />


    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/black"
        android:padding="10dp"
        android:src="@drawable/back" />

</LinearLayout>