<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/settings"
        android:background="#000"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="30dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="English"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_weight="1"
            android:id="@+id/rbEnglish"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="French"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_weight="1"
            android:id="@+id/rbFrench"/>
    </RadioGroup>

    <Button
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:text="Save"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="17sp"
        android:id="@+id/btnSave"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/about_us"
        android:layout_gravity="center_horizontal"
        android:textColor="#1A3DFF"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:background="#000000"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:text="@string/follow_us_on_social_media"
        android:textColor="#000000"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_facebook" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/garage_sale"
                android:textStyle="italic"
                android:textColor="#1A3DFF"
                android:textSize="20dp"/>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:background="@color/colorGray"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_insta" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale_garage"
                android:textStyle="italic"
                android:textColor="#1A3DFF"
                android:textSize="20dp"/>
        </LinearLayout>


    </LinearLayout>



</LinearLayout>